# design-study-texteditor

./: Cargo.toml  PROJECTION_PROBLEM.md  README.md  TASKS.md  TODO.md
src/: NOTES.txt  cursor.rs  document.rs  lib.rs  main.rs  node.rs  util.rs
src/util/: logging.rs  mutstr.rs
tests/: basic.rs
