[package]
name = "keystroke-crdt-experiment"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"
crate-type = "lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.57"
hex="0.4"
termion="1"

[dev-dependencies]