[package]
name = "keystroke-crdt-experiment"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"
crate-type = "lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.57"
hex="0.4"
structopt="0.3"

tracing="0.1"
tracing-appender = "0.1.1"
tracing-subscriber="0.2"

[dependencies.cursive]
version="0.15"
default-features = false
features = ["termion-backend"]


[dev-dependencies]